// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorDate renders a single author 1`] = `
<div
  className="file__AuthorDateContainer-s951nr8-0 gYwNkD"
>
  <div
    className="sc-bdVaJa bcNlZk"
  >
    By 
    Molly Gottschalk
  </div>
  <div
    className="sc-bdVaJa bcNlZk"
  >
    May 19, 2017 9:09 am
  </div>
</div>
`;

exports[`AuthorDate renders multiple authors 1`] = `
<div
  className="file__AuthorDateContainer-s951nr8-0 gYwNkD"
>
  <div
    className="sc-bdVaJa bcNlZk"
  >
    By 
    Molly Gottschalk and Kana Abe
  </div>
  <div
    className="sc-bdVaJa bcNlZk"
  >
    May 19, 2017 9:09 am
  </div>
</div>
`;

exports[`Standard Header renders standard header properly 1`] = `
<div
  className="file__StandardHeaderContainer-s13evez-0 fmppsk"
>
  <div
    className="file__Vertical-s13evez-1 jhCIcQ"
  >
    Art Market
  </div>
  <div
    className="file__StandardTitle-s1sluhjf-0 bGRsjT"
  >
    New York's Next Art District
  </div>
  <div
    className="file__AuthorDateContainer-s951nr8-0 gYwNkD"
  >
    <div
      className="sc-bdVaJa bcNlZk"
    >
      By 
      Molly Gottschalk
    </div>
    <div
      className="sc-bdVaJa bcNlZk"
    >
      May 19, 2017 9:09 am
    </div>
  </div>
</div>
`;

exports[`feature renders feature full header properly 1`] = `
<div
  className="sc-bZQynM dQyFHc"
  data-type="fullscreen"
>
  <div>
    <div
      className="sc-ifAKCX eaHLCC"
      src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
    />
    <div
      className="sc-bwzfXH gWZoXy"
    />
  </div>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-lq75tn-1 eZtUXf"
      >
        Art Market
      </div>
      <div
        className="feature__title file__FeatureTitle-s1sluhjf-1 lkDrMY"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-lq75tn-5 fvCnYB"
      >
        <div
          className="feature__subheader-text file__SubHeaderText-s1sluhjf-2 jrImbk"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-s951nr8-0 gYwNkD"
        >
          <div
            className="sc-bdVaJa bfrJtG"
          >
            By 
            Molly Gottschalk
          </div>
          <div
            className="sc-bdVaJa bfrJtG"
          >
            May 19, 2017 9:09 am
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature split header properly 1`] = `
<div
  className="sc-bZQynM dQyFHc"
  data-type="split"
>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-lq75tn-1 eZtUXf"
      >
        Art Market
      </div>
      <div
        className="feature__title file__FeatureTitle-s1sluhjf-1 lkDrMY"
      >
        New York's Next Art District
      </div>
      <div
        className="sc-ifAKCX eaHLCC"
        src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
      />
      <div
        className="file__SubHeader-lq75tn-5 fvCnYB"
      >
        <div
          className="feature__subheader-text file__SubHeaderText-s1sluhjf-2 jrImbk"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-s951nr8-0 gYwNkD"
        >
          <div
            className="sc-bdVaJa bcNlZk"
          >
            By 
            Molly Gottschalk
          </div>
          <div
            className="sc-bdVaJa bcNlZk"
          >
            May 19, 2017 9:09 am
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature text header properly 1`] = `
<div
  className="sc-bZQynM dQyFHc"
  data-type="text"
>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-lq75tn-1 eZtUXf"
      >
        Art Market
      </div>
      <div
        className="feature__title file__FeatureTitle-s1sluhjf-1 lkDrMY"
      >
        New York's Next Art District
      </div>
      <div
        className="file__SubHeader-lq75tn-5 fvCnYB"
      >
        <div
          className="feature__subheader-text file__SubHeaderText-s1sluhjf-2 jrImbk"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-s951nr8-0 gYwNkD"
        >
          <div
            className="sc-bdVaJa eeGSmv"
          >
            By 
            Molly Gottschalk
          </div>
          <div
            className="sc-bdVaJa eeGSmv"
          >
            May 19, 2017 9:09 am
          </div>
        </div>
      </div>
    </div>
    <img
      className="file__Image-lq75tn-3 ewYriW"
      src="https://artsy-media-uploads.s3.amazonaws.com/YqTtwB7AWqKD95NGItwjJg%2FRachel_Rossin_portrait_2.jpg"
    />
  </div>
</div>
`;
